[gd_scene load_steps=21 format=3 uid="uid://bwggrf7sbmkcv"]

[ext_resource type="Script" uid="uid://d3s8yxuvpmekm" path="res://addons/PlayerCharacter/StateMachine/PlayerCharacterScript.gd" id="1_h128t"]
[ext_resource type="PackedScene" uid="uid://67fgk7omebds" path="res://Player/player_arms.tscn" id="2_2rfya"]
[ext_resource type="Script" uid="uid://b0fbr48rbvn27" path="res://addons/PlayerCharacter/Camera/CameraScript.gd" id="2_x12n0"]
[ext_resource type="PackedScene" uid="uid://tv24746ehvjb" path="res://Systems/Gun_System/gun_system.tscn" id="2_ypkm2"]
[ext_resource type="Shader" uid="uid://cjakbvfjicq5c" path="res://psx_camera/psx_camera_shader.gdshader" id="3_fu2j1"]
[ext_resource type="PackedScene" uid="uid://bvofm0kvj4cnh" path="res://Menu/PauseMenu/PauseMenu.tscn" id="12_17hed"]
[ext_resource type="Script" uid="uid://sca7ypsol83f" path="res://addons/PlayerCharacter/StateMachine/StateMachineScript.gd" id="54_e0r17"]
[ext_resource type="Script" uid="uid://stil4xkf3tk0" path="res://addons/PlayerCharacter/StateMachine/IdleStateScript.gd" id="55_dayh2"]
[ext_resource type="Script" uid="uid://blt7dest23fk0" path="res://addons/PlayerCharacter/StateMachine/WalkStateScript.gd" id="56_w3td4"]
[ext_resource type="Script" uid="uid://5gk47o641xgt" path="res://addons/PlayerCharacter/StateMachine/RunStateScript.gd" id="57_gwv0a"]
[ext_resource type="Script" uid="uid://dvu58wf01wils" path="res://addons/PlayerCharacter/StateMachine/JumpStateScript.gd" id="58_gwv0a"]
[ext_resource type="Script" uid="uid://bh3rdvokmrar1" path="res://addons/PlayerCharacter/StateMachine/InairStateScript.gd" id="59_bqtt6"]
[ext_resource type="Script" uid="uid://bhoqhv7escpyx" path="res://addons/PlayerCharacter/StateMachine/CrouchStateScript.gd" id="60_tu3bf"]

[sub_resource type="Curve" id="Curve_h128t"]
_limits = [0.0, 60.0, 0.0, 1.0]
_data = [Vector2(0, 12), 0.0, 0.0, 0, 0, Vector2(1, 60), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_takn3"]
_limits = [0.0, 30.0, 0.0, 1.0]
_data = [Vector2(0, 3), 0.0, 0.0, 0, 0, Vector2(1, 30), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2rap5"]
render_priority = 0
shader = ExtResource("3_fu2j1")
shader_parameter/enable_fog = false
shader_parameter/fog_color = Color(0.729412, 0.729412, 0.729412, 1)
shader_parameter/noise_color = Color(0, 0, 0, 1)
shader_parameter/fog_distance = 100.0
shader_parameter/fog_fade_range = 50.0
shader_parameter/enable_noise = false
shader_parameter/noise_time_fac = 1.65
shader_parameter/enable_color_limitation = true
shader_parameter/color_levels = 32
shader_parameter/enable_dithering = true
shader_parameter/dither_strength = 0.5

[sub_resource type="QuadMesh" id="QuadMesh_17hed"]
material = SubResource("ShaderMaterial_2rap5")
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5yjma"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6bkys"]
albedo_color = Color(0.196078, 0.223529, 1, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_p2iaj"]

[node name="PlayerCharacter" type="CharacterBody3D" groups=["PlayerCharacter"]]
collision_layer = 2
collision_mask = 97
floor_block_on_wall = false
floor_max_angle = 1.13446
floor_snap_length = 0.0
platform_floor_layers = 4278190081
script = ExtResource("1_h128t")
desiredMoveSpeedCurve = SubResource("Curve_h128t")
maxSpeed = 30.0
inAirMoveSpeedCurve = SubResource("Curve_takn3")
hitGroundCooldown = 0.2
bunnyHopDmsIncre = 3.0
baseHitboxHeight = 2.0
baseModelHeight = 1.0
heightChangeSpeed = 10.0
crouchSpeed = 5.0
crouchAccel = 7.0
crouchDeccel = 7.0
crouchHitboxHeight = 1.2
crouchModelHeight = 0.6
walkSpeed = 8.0
walkAccel = 8.0
walkDeccel = 8.0
runSpeed = 12.0
runAccel = 5.0
runDeccel = 5.0
jumpHeight = 2.0
jumpTimeToPeak = 0.3
jumpTimeToFall = 0.24
jumpCooldown = 0.2
nbJumpsInAirAllowed = 1
coyoteJumpCooldown = 0.3
moveForwardAction = "moveForward"
moveBackwardAction = "moveBackward"
moveLeftAction = "moveLeft"
moveRightAction = "moveRight"
runAction = "run"
crouchAction = "crouch"
jumpAction = "jump"

[node name="GunSystem" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("2_ypkm2")]
parent = NodePath("..")

[node name="CameraHolder" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.55, 0)
script = ExtResource("2_x12n0")
XAxisSensibility = 0.05
YAxisSensibility = 0.05
maxUpAngleView = -90.0
maxDownAngleView = 90.0
startFOV = 90.0
baseCameraLerpSpeed = 8.0
crouchCameraLerpSpeed = 8.0
crouchCameraDepth = -0.6
bobFrequency = 1.1
bobAmplitude = 0.15
camTiltRotationValue = 0.35
camTiltRotationSpeed = 2.2
onFloorTiltValDivider = 1.6
mouseModeAction = "mouseMode"

[node name="Camera" type="Camera3D" parent="CameraHolder"]
cull_mask = 3
current = true
fov = 90.0
near = 0.01
far = 1000.0

[node name="PSXMesh" type="MeshInstance3D" parent="CameraHolder/Camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
mesh = SubResource("QuadMesh_17hed")

[node name="Bullet_Raycast" type="RayCast3D" parent="CameraHolder/Camera"]
target_position = Vector3(0, 1, -40)
debug_shape_custom_color = Color(0.686275, 0.686275, 0.686275, 1)
debug_shape_thickness = 5

[node name="Player_Arms" parent="CameraHolder/Camera" instance=ExtResource("2_2rfya")]
transform = Transform3D(1, 0, -1.06581e-14, 0, 1, 0, 1.06581e-14, 0, 1, -1.244e-08, -3.16679, 0.284594)

[node name="Hitbox" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_5yjma")

[node name="Model" type="MeshInstance3D" parent="."]
visible = false
layers = 2
material_override = SubResource("StandardMaterial3D_6bkys")
mesh = SubResource("CapsuleMesh_p2iaj")

[node name="Raycasts" type="Node3D" parent="."]

[node name="CeilingCheck" type="RayCast3D" parent="Raycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.758088, 0)
exclude_parent = false
target_position = Vector3(0, 3, 0)
debug_shape_custom_color = Color(1, 0, 0, 1)

[node name="FloorCheck" type="RayCast3D" parent="Raycasts"]
exclude_parent = false
target_position = Vector3(0, -3, 0)
debug_shape_custom_color = Color(0, 0, 0.956863, 1)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initialState")]
script = ExtResource("54_e0r17")
initialState = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("55_dayh2")
metadata/_custom_type_script = "uid://stil4xkf3tk0"

[node name="WalkState" type="Node" parent="StateMachine"]
script = ExtResource("56_w3td4")
metadata/_custom_type_script = "uid://blt7dest23fk0"

[node name="RunState" type="Node" parent="StateMachine"]
script = ExtResource("57_gwv0a")
metadata/_custom_type_script = "uid://5gk47o641xgt"

[node name="JumpState" type="Node" parent="StateMachine"]
script = ExtResource("58_gwv0a")
metadata/_custom_type_script = "uid://dvu58wf01wils"

[node name="InairState" type="Node" parent="StateMachine"]
script = ExtResource("59_bqtt6")
metadata/_custom_type_script = "uid://bh3rdvokmrar1"

[node name="CrouchState" type="Node" parent="StateMachine"]
script = ExtResource("60_tu3bf")
metadata/_custom_type_script = "uid://bhoqhv7escpyx"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("12_17hed")]

[node name="fpsLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "FPS: "
